--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" style="border-radius: 50%;"  href="https://scontent.fblr11-1.fna.fbcdn.net/v/t39.30808-6/289009125_3142928582639719_838304156814769403_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=acSAuGi_J_8AX_xXx0P&_nc_ht=scontent.fblr11-1.fna&oh=00_AT-n1u8TIEMl19AxtL4HvJ7kjEeyqrsRcNAqfbbyyL-mUA&oe=63371C9C" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="vus tube " />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>JSM Media</title>
+    <title>vus-tube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
